part1/1.10/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  type: ClusterIP
  selector:
    app: pingpong-app
  ports:
    - port: 2345
      targetPort: 3000
